Use List.get(0) instead of getFirst() so this compiles on Java 17
This module sets sourceCompatibility=17, but List.getFirst() was added in Java 21 (SequencedCollection), so it failed to resolve. Replaced both calls with List.get(0).